--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -6,9 +6,10 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 10000;
   height: 4.875em;
   background-color: $primary-color;
+  border-bottom: 1px solid $de_york;
 
   .container {
     position: relative;
